Fix for branding intermittent issue. Commented out overflow-x: auto
git-svn-id: https://drive.kana.com/SVN/UHG/IQ/KMRestAPI@2195 b552034e-f646-462b-9072-8d94b4fb3fa1

--- a/FilterServices/src/main/webapp/css/filters.css
+++ b/FilterServices/src/main/webapp/css/filters.css
@@ -155,7 +155,7 @@ button {
 								}
 					.fs_di_tagset_wrapper {
 						display: block;
-						overflow-x: auto;
+ 						/* overflow-x: auto; */
 					}
 						.fs_di_tagset_wrapper > nav > ul > li {
 	    					margin-left: 0;
